wallet tests
